# spacy-usage

./: .gitignore  README.md  pyproject.toml
usage/: 1_Finding_words,_phrases,_names_and_concepts.md  2_large-scale_data_analysis_with_spaCy.md  3_processing_pipelines.md  4_training_a_neural_network_model.md
